# melonDS

./: CMakeLists.txt  README.md  SDL-2.0.26.tar.zst  archive-3.6.2.tar.zst  slirp-4.7.0.tar.zst  zstd-1.5.5.tar.zst
cmake/: Findarchive.cmake
libslirp/: .gitignore  CMakeLists.txt
libslirp/build-aux/: Findglib.cmake  slirpConfig.cmake.in
libslirp/src/: libslirp.h  slirp.h
res/: melon.rc.in
src/: ARCodeFile.cpp  DSi_NAND.cpp  FATStorage.cpp  RTC.cpp  SPI.cpp  WifiAP.cpp
src/dolphin/: x64CPUDetect.cpp
src/fatfs/: ffsystem.c
src/frontend/qt_sdl/: ArchiveUtil.cpp  CMakeLists.txt  Config.cpp  Config.h  EmuSettingsDialog.cpp  Input.cpp  LAN_PCap.cpp  LAN_Socket.cpp  LocalMP.cpp  Platform.cpp  SaveManager.h  WifiSettingsDialog.cpp  main.cpp  main.h
src/sha1/: sha1.c
